
Changelog
=========

2018.4.4 (unreleased)
---------------------

- Fix tree portlet header styling for IE11. [Kevin Bieri]
- Fix global scoped "show more" links for SOLR livesearch [Rotonen]


2018.4.3 (2018-09-04)
---------------------

- Scale down size for logo wrapper, to have more space for personal menues. [phgross]
- Fix an encoding issue in an upgrade by no using model code. [deiferni]
- Fix double escaping of agendaitem title in meeting overview. [njohner]
- Fix handling of unidirectional by reference tasks in a sequential process. [phgross]


2018.4.2 (2018-08-30)
---------------------

- Make upgrade step 20180619143343 deferrable: Use of CMFEditions getHistory causes massive amounts of savepoints. [lgraf]


2018.4.1 (2018-08-30)
---------------------

- Revoke roles for former responsible when reassigning a task. [phgross]
- Fix notification when removing a proposal from a meeting schedule. [njohner]
- Pin ftw.table to 1.20.0, to fix a concurrency bug in tables. [njohner]
- Fix issue when commenting on a not submitted proposal. [phgross]
- Fix IE bug on the notification settings page. [phgross]
- Fix sharing view on committecontainer. [phgross]
- Fix missing favorite-id on toggle-link if toggling favorite from repository-tree. [elioschmutz]
- Fix broken favorites state if toggling state in the repository-tree. [elioschmutz]
- Extend meeting zip-export with sort_order and gever_id. [phgross]


2018.4.0 (2018-08-20)
---------------------

- Fix dropdown JS registration. [phgross]
- CSRF logging: Filter list of registered objects so only offending objects are logged in sentry [lgraf]
- Fix bug where reactivate transition action is not visible for adminsitrators. [phgross]
- Avoid fireing ObjectModifiedEvents multiple times, on task transitions. [phgross]
- Make sure widgets properly return persisted missing values for optional fields with default values [lgraf]
- Mark tasks text field no longer as the primary field. [phgross]